--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 model :
-  input_dim : 28
-  hidden_dim : 28
-  output_dim : 2
+  input_dim : 784
+  hidden_dim : 400
+  latent_dim : 20
 
 train :
   batch_size : 32
-  epochs : 10
+  epochs : 5
   learning_rate : 0.001
