--- a/hparams.yaml
+++ b/hparams.yaml
@@ -1,6 +1,3 @@
-tensorboard :
-  log_dir : "vae-v1"
-
 model :
   input_dim : 784
   hidden_dim : 400
@@ -8,5 +5,5 @@ model :
 
 train :
   batch_size : 128
-  epochs : 10
+  nb_epochs : 10
   learning_rate : 0.001
