--- a/configs/hparams.yaml
+++ b/configs/hparams.yaml
@@ -1,9 +1,13 @@
 model :
-  input_dim : 784
-  hidden_dim : 400
-  latent_dim : 20
+  channel_dim : 1
+  hidden_dim : 64
+  latent_dim : 32
 
 train :
   batch_size : 128
-  nb_epochs : 20
-  learning_rate : 0.0001
+  nb_epochs : 10
+  learning_rate : 0.0003
+
+dataset :
+  name : "mnist"
+  subset_size : 10000
